--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -15,4 +15,5 @@ jobs:
         with:
           max_post_count: "4"
           remove_duplicates: true
-          feed_list: "https://touhidshaikh.com/feed/
+          feed_list: "https://touhidshaikh.com/feed/"
+          
